# adc24-rsr

./: .gitignore  ADC24RockSolidReleases.jucer  CMakeLists.txt  plugin.cfg
.github/workflows/: 01-mac-workflow.yml  02-mac-workflow.yml  03-mac-workflow.yml  04-mac-workflow.yml  05-mac-workflow.yml  mac-workflow.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
